# equestrian_site_cms

backend/: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
backend/maintain/: generate_dev_data.py
backend/maintain/horse_generator/: config.json  generate_horses.py  generate_horses_pedigree.py  seed_dev_horse_data.py
backend/src/: alembic.ini  main.py  settings.py
backend/src/api/: __init__.py  auth.py  breeds.py  coat_color.py  horse_owner.py  horse_service.py  horses.py  photos.py  prices.py  site_settings.py
backend/src/core/entities/: __init__.py  base.py  breeds.py  coat_color.py  horse.py  horse_owner.py  horse_service.py  integration_credentials.py  photos.py  price.py  prices.py  site_settings.py  table.py  tokens.py  user.py
backend/src/depends/: repositories.py  services.py  utils.py
backend/src/media/: 224a90f6-ccf6-4c3d-9780-e6a0a9460127.aac  ec1da7cd-5017-4812-be69-8886cbd9b1b8.aac
backend/src/migration/: env.py
backend/src/models/: __init__.py  breeds.py  coat_color.py  horse.py  horse_owner.py  horse_service.py  photos.py  prices.py  site_settings.py  tokens.py  users.py
backend/src/repositories/: __init__.py  abstract_repository.py  breed_repository.py  coat_color_repository.py  horse_owner_repository.py  horse_repository.py  horse_service_repository.py  photo_repository.py  price_repository.py  site_settings_repository.py  user_repository.py
backend/src/utils/: basemodel.py  configure_logger.py  database.py  security.py
(+211 files in other folders)
