[project]
name = "nexora"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "eventlet>=0.40.3",
    "fastapi>=0.116.1",
    "httpx>=0.27.2",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "psycopg2-binary>=2.9.10",
    "aiolimiter>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "types-passlib>=1.7.7.20250602",
    "aiosqlite>=0.20.0",
    "sqlalchemy-utils>=0.42.0",
    "notebook>=7.4.7",
    "jupyterlab>=4.4.9",
    "ipykernel>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
